# ios-screen-record

./: LICENSE  README.md  main.py  requirements.txt  setup.cfg  setup.py  windows.md
ioscreen/: asyn.py  main.py  meaasge.py  ping.py  util.py
ioscreen/coremedia/: AudioStream.py  CMSampleBuffer.py  common.py  consumer.py  gstreamer.py  serialize.py  wav.py
packet/: asyn.py  meaasge.py  ping.py  sync.py  util.py
packet/coremedia/: CMFormatDescription.py  CMTime.py  CMclock.py  common.py  consumer.py  gstadapter.py  serialize.py  wav.py
screen/: asyn.py  meaasge.py  ping.py  sync.py  util.py
screen/coremedia/: CMFormatDescription.py  CMclock.py  consumer.py  gstadapter.py  gstreamer.py  serialize.py
test_case/: test_asyn.py  test_audio_stream.py  test_cmclock.py  test_format_descriptor.py  test_sample_buffer.py  test_serialize.py  test_sync.py  test_wav.py
