[metadata]
name = ioscreen
version = 1.0
author = chenpeijie
author-email = cpjsf@163.com
license = MIT
home-page = https://github.com/YueChen-C/ios-screen-record
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages = ioscreen
[entry_points]
console_scripts = ioscreen = ioscreen.main:main
